--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ pygmentscodefencesguesssyntax = true
 paginate = 3 # articles per page
 
 [params]
-	mode="dark" # color-mode → light,dark or auto
+	mode="auto" # color-mode → light,dark or auto
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "三分鐘熱度！"
 
